# friimod

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml
Friimod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Friimod/Friimod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Friimod/friimod/: friimod.py
src/friimod/: __init__.py  friimod.py
