[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Friimod"
version = "0.0.3"
authors = [
  { name="Nilon", email="nilon.pyprojects@gmail.com" },
]
description = "Friimod is a modding platform for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/spyspy69/Friimod/"
"Bug Tracker" = "https://github.com/spyspy69/Friimod/issues"